Update Index and styling 404

--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@ title: Laboratorium Riset dan Pengembangan Agroteknologi
 show_title: true
 articles:
   excerpt_type: html
+  excerpt_separator: <!--more-->
 header:
   theme: dark
   background: 'linear-gradient(135deg, rgb(34, 139, 87), rgb(139, 34, 139))'
 article_header:
   type: overlay
-  height: 100vh
+  height: 95vh
   theme: dark
   align: center
   background_color: '#203028'
