--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@ article_header:
   background_color: '#203028'
   background_image:
     gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
-    src: /assets/bg.jpg
+    src: /assets/bg-0.jpg
 ---
